# contract-bridge

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/generate-constrained-deals/: main.rs
examples/generate-deals/: README.md
src/: auction.rs  contract.rs  deal.rs  deck.rs  eval.rs  lib.rs
src/auction/: tests.rs
src/deck/: tests.rs
tests/: auction.rs  contract.rs  deal.rs  deck.rs  fmt.rs  proptest.rs  serde.rs
